# pyapp_gt

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.docker/: emailserver.docker-compose.yml
communication/management/commands/: emailcheck.py
communication/resources/: email.py
communication/services/: email.py
communication/tests/: test_services_email.py
django_core/: urls.py
django_core/settings/: base.py  local.py  production.py  test.py
scripts/: poetry.py
www/: package-lock.json  package.json  urls.py  webpack.common.js  webpack.dev.js  webpack.prod.js
www/src/js/: home.js
www/src/js/home/: script.js
www/templates/: base.html
www/templates/home/: index.html
www/templates/includes/: footer.html  header.html  navbar.html
www/urls/: home.py
www/views/: home.py
