[tool.poetry]
name = "pyapp-gt"
version = "0.1.0"
description = "Aplicação para uso em multiplos negocios."
authors = ["Douglas Panhota <douglaspands@gmail.com>"]
readme = "README.md"
packages = [
    {include = "django_core"}
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
django-debug-toolbar = "^4.3.0"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
make_requirements = "scripts.poetry:make_requirements"
make_secretkey = "scripts.poetry:make_secretkey"
www_watch = "scripts.poetry:run_www_watch"
